--- a/css/tiktok.css
+++ b/css/tiktok.css
@@ -1,4 +1,3 @@
-/* Reset */
 * {
   margin: 0;
   padding: 0;
@@ -10,9 +9,9 @@ body {
   background-color: #000;
   color: #fff;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  height: 100vh;
+  gap: 20px;
 }
 
 .video-container {
@@ -34,7 +33,6 @@ body {
   object-fit: cover;
 }
 
-/* Side icons */
 .side-icons {
   position: absolute;
   right: 10px;
@@ -66,7 +64,6 @@ body {
   color: #ff0050;
 }
 
-/* Video info */
 .video-info {
   position: absolute;
   left: 10px;
@@ -88,8 +85,6 @@ body {
   color: #ccc;
 }
 
-/* Hide scrollbar */
 body::-webkit-scrollbar {
   display: none;
 }
-
