--- a/css/tiktok.css
+++ b/css/tiktok.css
@@ -99,3 +99,7 @@ body {
 .caption-box .username {
   font-weight: bold;
 }
+#feedContainer {
+  overflow: visible; /* make sure this isn't hidden */
+}
+
